# newbase

./: .gitignore  CONFIG_SYSTEM_USAGE.md  Cargo.toml  README.md  TODO.MD  build.rs  config.toml  config_schema.toml
app/: Cargo.toml  build.rs
app/src/: main.rs
logic_system_macros/: Cargo.toml
logic_system_macros/src/: lib.rs
newbase-example/: Cargo.toml  build.rs
newbase-example/docs/: lua_scripting.md
newbase-example/scripts/: example.lua
newbase-example/src/: aimbot.rs  esp.rs  main.rs  newmain.rs  offsets.rs  player.rs  scripting.rs
newbase-example/src/config_system/: mod.rs
newbase-example/src/models/: math.rs  mod.rs
newbase-example/src/offsets/: animationsystem_dll.cs  animationsystem_dll.hpp  animationsystem_dll.json  animationsystem_dll.rs  buttons.cs  buttons.hpp  buttons.json  buttons.rs  client_dll.cs  client_dll.hpp  client_dll.json  client_dll.rs  engine2_dll.cs  engine2_dll.hpp  engine2_dll.json  engine2_dll.rs  host_dll.cs  host_dll.hpp  host_dll.rs  info.json  interfaces.cs  interfaces.hpp  interfaces.json  interfaces.rs  materialsystem2_dll.cs  materialsystem2_dll.hpp  materialsystem2_dll.rs  networksystem_dll.cs  networksystem_dll.hpp  networksystem_dll.rs  offsets.cs  offsets.hpp  offsets.json  offsets.rs  panorama_dll.cs  panorama_dll.hpp  panorama_dll.rs  particles_dll.cs  particles_dll.hpp  particles_dll.json  (+36 more)
resources/: frontend.html
src/: build_support.rs  discord.rs  init.rs  lib.rs  macros.rs  main.rs  overlay.rs  remote.rs  remote_hook.rs
src/app/: buffer.rs  config.rs  gui.rs  humanizer.rs  mod.rs  overlay.rs  web_menu.rs
src/app/config_system/: MACRO_USAGE.md  codegen.rs  error.rs  keys.rs  macros.rs  mod.rs  schema.rs
src/app/logic/: aimbot.rs  discord.rs  esp.rs  exploits.rs  main_loop.rs  mod.rs
src/app/threads/: aimbot.rs  all.rs  cache.rs  mod.rs  players.rs
src/datatypes/: buffer.rs  mod.rs  skeleton.rs
src/models/: mod.rs
src/widgets/: animation.rs  checkbox.rs  color_picker.rs  combobox.rs  menu_button.rs  mod.rs  searchbar.rs  smooth_slider.rs  theming.rs  toasts.rs  toggle_switch.rs
