# cargo-features = ["profile-rustflags","panic-immediate-abort"]


[package]
name = "replace-this-in-cargo-toml-or-you-are-stupid-ok-thanks"
version = "0.1.0"
edition = "2024"
build = "build.rs"




[features]
default = ["loader","launch_game","kill_game"]
loader = []
launch_game = []
kill_game = []


[dependencies]
memory = {version = "*", git = "https://github.com/NoctisMenu/memory.git", branch = "leakeddrv"} #mem access
windowing = { git = "https://github.com/NoctisMenu/windowing.git" } #cross platform window info struct
windows-strings = "0.5.0"

egui = {version = "0.29.0", features = ["serde"]}
egui_overlay = {version = "0.9.0", features = ["three_d"]}
egui_render_three_d = "0.9.0"
egui_window_glfw_passthrough = "0.9.0"
windows = { version = "0.62.0", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_System_Console", "Win32_UI_Controls", "Win32_UI_Shell","Win32_Graphics_Dwm"] }
parking_lot = "0.12.4"
device_query = "4.0.1"
log = "0.4.28"
serde = "1.0.228"
mlua = { version = "0.11.4", features = ["luau", "send"] }
anyhow = "1.0.100"
colog = "1.4.0"
egui_extras = { version = "0.29.0", features = ["all_loaders"] }
image = { version = "0.25.8", features = ["jpeg"] }
ureq = "3.1.2"
rand = "0.9.2"
discord-sdk = "0.4.0"
tokio = "1.48.0"
webbrowser = "1.0.6"
toml = "0.8"
thiserror = "2.0"

[build-dependencies]
winresource = "^0.1"
toml = "0.8"


