# cargo-features = ["profile-rustflags","panic-immediate-abort"]


[package]
name = "newbase"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = ["loader","launch_game","kill_game"]
loader = []
launch_game = []
kill_game = []


[dependencies]
logic_system_macros = { path = "logic_system_macros" }
memory = {version = "*", git = "https://github.com/NoctisMenu/memory.git", branch = "leakeddrv"} #mem access
windowing = { git = "https://github.com/NoctisMenu/windowing.git" } #cross platform window info struct\
unreal-types = {git = "https://github.com/NoctisMenu/unreal.git", features = ["ue5","imgui"], default-features=false}
unreal-esp = {git = "https://github.com/NoctisMenu/unreal.git", default-features=false, features = ["ue5"]}
unreal-math = {git = "https://github.com/NoctisMenu/unreal.git", default-features=false, features = ["ue5"]}
windows-strings = "0.5.0"

windows = { version = "0.62.0", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_System_Console", "Win32_UI_Controls", "Win32_UI_Shell","Win32_Graphics_Dwm"] }
parking_lot = "0.12.4"
device_query = "4.0.1"
log = "0.4.28"
serde = "1.0.228"
anyhow = "1.0.100"
colog = "1.4.0"
image = { version = "0.25.8", features = ["jpeg"] }
rand = "0.9.2"
toml = "0.8"
thiserror = "2.0"
newoverlay = { git = "https://github.com/noctismenu/newoverlay", version = "0.1.0" }
winresource = "^0.1"
serde_derive = "1.0.228"

[workspace]
members = [".", "logic_system_macros"]
exclude = ["newbase-example"]
resolver = "2"
